src/test/ui/error-codes/E0033.stderr
error[E0423]: expected value, found trait `SomeTrait`
  --> $DIR/E0033.rs:6:37
   |
LL |     let trait_obj: &dyn SomeTrait = SomeTrait;
   |                                     ^^^^^^^^^ not a value

error[E0038]: the trait `SomeTrait` cannot be made into an object
  --> $DIR/E0033.rs:6:20
   |
LL |     let trait_obj: &dyn SomeTrait = SomeTrait;
   |                    ^^^^^^^^^^^^^^ the trait `SomeTrait` cannot be made into an object
   |
   = note: method `foo` has no receiver

error[E0033]: type `&dyn SomeTrait` cannot be dereferenced
  --> $DIR/E0033.rs:11:9
   |
LL |     let &invalid = trait_obj;
   |         ^^^^^^^^ type `&dyn SomeTrait` cannot be dereferenced

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0033, E0038, E0423.
For more information about an error, try `rustc --explain E0033`.
